// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button allows to specify size and style 1`] = `
<button
  className="btn btn-lg btn-primary"
  disabled={false}
  id="button1"
  type="button"
>
  Large Primary button
</button>
`;

exports[`Button renders properly 1`] = `
<button
  className="btn btn-default"
  disabled={false}
  id="button1"
  type="button"
>
  Default button
</button>
`;
